# Habits

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habit/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
users/: models.py  urls.py
users/management/commands/: csu.py
